# burn

./: Cargo.toml
.github/workflows/: publish.yml
crates/burn-cubecl-fusion/src/matmul/: args.rs  optimization.rs
crates/burn-cubecl/src/kernel/matmul/tune/: base.rs
crates/burn-distributed/: Cargo.toml
crates/burn-distributed/src/: backend.rs  lib.rs  tensor.rs
crates/burn-distributed/src/sharding/: mesh.rs  mod.rs  spec.rs
crates/burn-hip/src/: lib.rs
